--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,10 @@
+:root {
+    --heading-background-color: darkblue;
+    --border-color: black;
+}
+
 nav  {
-    background-color: darkblue;
+    background-color: var(--heading-background-color);
     padding: 10px;
 }
 
@@ -9,13 +14,13 @@ nav a {
     padding: 20px;
 }
 h1 {
-    color: darkblue;
+    color: var(--heading-background-color)
 }
 
 main img {
     width: 150px;
     height: auto;
-    border: 1px solid black;
+    border: 1px solid var(--border-color);
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
@@ -31,7 +36,7 @@ main {
 aside {
   width: 20rem;
   margin: 1rem;
-  border: 1px solid rgb(0 0 0 / 0.2); /* 1️⃣ */
+  border: 1px solid var(--border-color); /* 1️⃣ */
   padding: 1rem;
   background-color: #eee;
   color: #333;
@@ -45,6 +50,6 @@ aside img {
 
 footer {
   margin-top: 15px;
-  border-top: 1px solid #000;
+  border-top: 1px solid var(--border-color);
   text-align: center;
 }
