--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,12 @@
     --border-color: black;
 }
 
+     
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 nav  {
     background-color: var(--heading-background-color);
     padding: 10px;
@@ -18,6 +24,8 @@ h1 {
 }
 
 main img {
+    float: right;
+    margin: 0 0 1rem 1rem;
     width: 150px;
     height: auto;
     border: 1px solid var(--border-color);
@@ -35,12 +43,8 @@ main {
 
 aside {
   width: 20rem;
-  margin: 1rem;
-  border: 1px solid var(--border-color); /* 1️⃣ */
-  padding: 1rem;
-  background-color: #eee;
-  color: #333;
   text-align: center;
+  position: relative;
 }
 
 aside img {
@@ -48,8 +52,27 @@ aside img {
   height: auto;
 }
 
+aside h2 {
+  position: absolute;
+  top: 100px;
+  left: 125px;
+  font-size: smaller;
+  font-weight: 500;
+}
+
 footer {
   margin-top: 15px;
   border-top: 1px solid var(--border-color);
   text-align: center;
+}
+
+
+/* Class Selectors */
+
+.box {
+  margin: 1rem;
+  border: 1px solid var(--border-color);
+  padding: 1rem;
+  background-color: #ddd;
+  color: var(--border-color)
 }
