--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,22 +3,40 @@
     --border-color: black;
 }
 
-     
+header, .grid, footer {
+  max-width: 840px;
+  margin: 0 auto;
+}
+
+.grid {
+  display: grid;
+  align-items: center;
+}
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 nav  {
-    background-color: var(--heading-background-color);
-    padding: 10px;
+  background-color: var(--heading-background-color);
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 nav a {
+    display: block;
     color: white;
     display: block;
-    padding: 20px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    text-decoration: none;
 }
+
 h1 {
     color: var(--heading-background-color)
 }
@@ -38,13 +56,17 @@ p {
 }
 
 main {
-  max-width: 840px;
+  grid-column: 2/3;
+  margin: 1rem;
 }
 
 aside {
   width: 20rem;
   text-align: center;
   position: relative;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  align-self: flex-start;
 }
 
 aside img {
