--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -95,9 +95,6 @@ p, article {
   padding: 8px;
 }
 
-.socialmedia a {
-    text-decoration: none;
-}
 
 .hero {
   position: relative;
@@ -108,8 +105,8 @@ p, article {
     width: 100%;
     height: auto;
   }
-
-h1 {
+  
+  h1 {
   position: absolute;
   top: 20px;
   width: 100%;
@@ -129,9 +126,120 @@ h1 {
 
 footer{
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 4fr 2fr 1fr;
+}
+
+.socialmedia {
+  grid-column: 3;
 }
 
 .socialmedia img {
   width: 20px;
+}
+
+.socialmedia a {
+    text-decoration: none;
+}
+
+iframe {
+    width: 350px;
+    height: 250px;
+    border: 0;
+    justify-self: center;
+}
+
+#employees {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+}
+
+#contact {
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 6fr 1fr 5fr;
+  height: 550px;
+}
+
+#form {
+  border: var(--primary-color);
+  height: 500px;
+  width: 400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: .6rem;
+  align-self: flex-start;
+}
+
+#form h2 {
+  grid-column: 2/5;
+}
+
+#purpose {
+  grid-column: 1/5;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+#purpose h2 {
+  grid-column: 1/3;
+}
+
+label[for="General-Inquiry"] {
+  grid-column: 1/2;
+}
+
+input[type="checkbox"], input[type="radio"] {
+  width: 15px;
+  height: auto;
+}
+
+label[for="message"] {
+  grid-column: 1/3;
+  font-family: var(--heading-font);
+  color: var(--primary-color);
+  font-size: 25px;
+  font-weight: bold;
+}
+
+label[for="newsletter"] {
+  grid-column: 1/4;
+  font-size: smaller;
+}
+
+textarea {
+  grid-column: 1/5;
+  height: 70px;
+}
+
+input[type="text"], input[type="email"] {
+  grid-column: 2/5;
+}
+
+button {
+  grid-column: 1/5;
+  margin: 1rem;
+  width: 200px;
+  background-color: var(--primary-color);
+  color: var(--accent1-color);
+  border: none;
+  border-radius: .5rem;
+  padding: .75rem;
+  font-size: 1.2rem;
+  justify-self: center;
+}
+
+button:hover {
+  background-color: var(--accent2-color);
+}
+
+#company-information {
+  display: grid;
+  grid-column: 3/5;
+  align-self: flex-start;
+}
+
+#company-information h2 {
+  grid-column: 1;
+  justify-self: center;
 }
